<resources>
    <string name="app_name">小鲸鱼相册</string>
    <string name="album">相册</string>
    <string name="notes">笔记</string>
    <string name="ai_cut">AI剪</string>
    <string name="mine">我的</string>
    <string name="setting">设置</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="login">登录</string>
    <string name="cloud_pic">云相册</string>
    <string name="default_pic_dec">0相册 0照片</string>
    <string name="default_nick_name">未设置昵称</string>
    <string name="account_security">账户安全</string>
    <string name="personal_info">个人信息</string>
    <string name="check_version">版本升级</string>
    <string name="clear_cache">清除缓存</string>
    <string name="bug_reply">Bug 反馈</string>
    <string name="responsibility">免责声明</string>
    <string name="privacy">隐私协议</string>
    <string name="user_privacy">用户协议</string>
    <string name="logout">退出登录</string>
    <string name="cloud_notes">云笔记</string>
    <string name="register">注册</string>
    <string name="password">密码</string>
    <string name="enter_phone_number">手机号</string>
    <string name="number_86">+86</string>
    <string name="forget_password">忘记密码</string>
    <string name="enter_password">8-16位、字母和数字组合</string>
    <string name="confirm_password">确认密码</string>
    <string name="error_phone">需(11位)正确格式的手机号</string>
    <string name="error_password">需(8-16位、字母和数字组合)正确格式的密码</string>
    <string name="check_privacy_first">请先阅读并同意隐私协议</string>
    <string name="i_know">我知道了</string>
    <string name="cus_phone">手机-- 18583505646  </string>
    <string name="cus_qq">QQ -- 2569658002</string>
    <string name="confirm">确认</string>
    <string name="logout_check">是否需要退出登录？</string>
    <string name="cancel">取消</string>
    <string name="default_dec">阳光下的记忆 斑斑驳驳 散落的是一片遐想的花海</string>
    <string name="edit_head">头像</string>
    <string name="nick_name">昵称</string>
    <string name="gender">性别</string>
    <string name="account">账号</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="create_time">注册时间</string>
    <string name="des">个性签名</string>
    <string name="camera">相机拍照</string>
    <string name="album_up">相册选择</string>
    <string name="deny_permission">未授予权限将不能使用</string>
    <string name="update_success">更新个人信息成功！</string>
    <string name="update_now">立即更新</string>
    <string name="next_do">下次再说</string>
    <string name="update_newest">已经是最新版本哦！</string>
    <string name="no_cache">暂无缓存数据</string>
    <string name="response_history">反馈记录</string>
    <string name="response_type">反馈类型</string>
    <string name="fun_opt">功能优化</string>
    <string name="bug_res">Bug反馈</string>
    <string name="communicate_email">联系邮箱</string>
    <string name="question_des">问题描述</string>
    <string name="screen_cut">相关截图</string>
    <string name="commit">提交</string>
    <string name="success_commit">提交成功！可在反馈记录中查看哦～</string>
    <string name="error_email">需填写正确的邮箱哦～</string>
    <string name="error_content">需要填写问题描述哦～</string>
    <string name="handle_progress">处理进度</string>
    <string name="response_time">反馈时间</string>
    <string name="new_album">新建相册</string>
    <string name="finish_create">完成创建</string>
    <string name="normal">普通</string>
    <string name="multi_people">多人</string>
    <string name="baby">亲子</string>
    <string name="travel">旅游</string>
    <string name="lovers">情侣</string>
    <string name="album_name">相册名称</string>
    <string name="add_album_title">添加相册名称</string>
    <string name="album_theme">主题</string>
    <string name="multi_people_des">邀请闺蜜、好友、同学一起上传照片，沉淀美好回忆</string>
    <string name="invite_friend">邀请小伙伴</string>
    <string name="add">添加</string>
    <string name="baby_des">上传宝宝照片，自动生成宝宝成长时光轴，共享家人一起关注宝宝动态</string>
    <string name="birthDay">生日</string>
    <string name="travel_des">上传旅途照片，自动生成足迹地图，记录旅途美好时光</string>
    <string name="love_day">填写在一起的日期</string>
    <string name="lovers_des">和恋人一起上传照片。沉淀在一起的每个瞬间</string>
    <string name="face">封面</string>
    <string name="default_album_name">----</string>
    <string name="no_select_pic">取消选择</string>
    <string name="error_select">选择图片出错</string>
    <string name="all_upload_success">全部上传成功！</string>
    <string name="developing">正在马不停蹄地开发中...</string>
    <string name="more">更多</string>
    <string name="exchange">旋转</string>
    <string name="download">下载</string>
    <string name="error_rotate">旋转出错了，请稍后重试</string>
    <string name="error_download">下载失败了，请稍后重试</string>
    <string name="success_download">已保存到本地</string>
    <string name="select_all">全选</string>
    <string name="select_item">选择项目</string>
    <string name="confirm_delete">你确定要删除所选的照片吗？</string>
    <string name="delete">删除</string>
    <string name="delete_tips">所选的图片将会从相册中永久删除，且无法找回。</string>
    <string name="delete_success">删除成功！</string>
    <string name="edit_album">编辑相册</string>
    <string name="delete_album">删除相册</string>
    <string name="compress_pic">压缩图片中...</string>
    <string name="confirm_delete_album">你确定要删除此相册吗？</string>
    <string name="delete_album_tips">删除相册将会删除相册内所有图片，且无法找回。</string>
    <string name="security_question">密保问题</string>
    <string name="modify">修改</string>
    <string name="id">ID</string>
    <string name="bind_phone_number">绑定手机号</string>
    <string name="modify_password">修改密码</string>
    <string name="please_select_question">请选择密保问题</string>
    <string name="input_security_answer">请输入密保答案</string>
    <string name="modify_success">密保修改成功！</string>
    <string name="privacy_pre">请阅读并勾选同意小鲸鱼相册</string>
    <string name="privacy_center">和</string>
    <string name="privacy_login">《隐私协议》</string>
    <string name="user_privacy_login">《用户协议》</string>
    <string name="app_beian">APP备案号</string>
    <string name="app_beian_code">赣ICP备2024021195号-1A</string>
    <string name="bei_an">工信部服务平台</string>
    <string name="qq_login">QQ登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="deny_permission_update">未授予存储权限，请在“设置”->“应用”->“小鲸鱼相册”->“权限”->“存储”中开启</string>
    <string name="init_download_text">0M/0M</string>
    <string name="init_progress_text">0%</string>
    <string name="init_desc">当前速度<font color="#DBA366">0Mb/s</font>, 预计还需<font color="#DBA366">xx秒</font>，请稍后～</string>
</resources>