<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue_gradient">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/m_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        app:navigationIcon="@mipmap/back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingEnd="40dp">
            <TextView
                android:id="@+id/tv_title"
                style="@style/BoldText18"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/new_album"
                android:textAlignment="center"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextPrimary16"
                android:layout_marginEnd="15dp"
                android:visibility="gone"
                android:text="@string/save"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/container_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        android:background="@drawable/bg_10_white"
        app:layout_constraintTop_toBottomOf="@id/m_toolbar">

        <!--相册名称-->
        <com.fxyandtjh.voiceaccounting.view.customer.LineItemView
            android:id="@+id/liv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/album_name"
            app:type="edit"
            app:allowTypeChange="true"
            app:isEnable="true"/>
        <!--封面-->
        <com.fxyandtjh.voiceaccounting.view.customer.LineItemView
            android:id="@+id/liv_face"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/face"
            app:type="icon"
            app:isEnable="true"/>
        <!--主题-->
        <com.fxyandtjh.voiceaccounting.view.customer.LineItemView
            android:id="@+id/liv_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/album_theme"
            app:type="fixed"
            app:showLine="false"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp">
            <com.fxyandtjh.voiceaccounting.view.customer.AlbumThemeItemView
                android:id="@+id/theme_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:key="@string/normal"
                app:activeIconId="@mipmap/normal"
                app:inActiveIconId="@mipmap/normal_gray"/>
            <com.fxyandtjh.voiceaccounting.view.customer.AlbumThemeItemView
                android:id="@+id/theme_multi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:key="@string/multi_people"
                app:activeIconId="@mipmap/friend"
                app:inActiveIconId="@mipmap/friend_gray"/>
            <com.fxyandtjh.voiceaccounting.view.customer.AlbumThemeItemView
                android:id="@+id/theme_baby"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:key="@string/baby"
                app:activeIconId="@mipmap/baby"
                app:inActiveIconId="@mipmap/baby_gray"/>
            <com.fxyandtjh.voiceaccounting.view.customer.AlbumThemeItemView
                android:id="@+id/theme_travel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:key="@string/travel"
                app:activeIconId="@mipmap/travel"
                app:inActiveIconId="@mipmap/travel_gray"/>
            <com.fxyandtjh.voiceaccounting.view.customer.AlbumThemeItemView
                android:id="@+id/theme_lovers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:key="@string/lovers"
                app:activeIconId="@mipmap/lovers"
                app:inActiveIconId="@mipmap/lovers_gray"/>
        </LinearLayout>
        <!--主题描述-->
        <TextView
            android:id="@+id/tv_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextPrimary12"
            android:paddingVertical="3dp"
            android:paddingHorizontal="15dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_4_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_head"
            android:layout_marginTop="6dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/finish_create"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingVertical="6dp"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:background="@drawable/btn_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_content" />

</androidx.constraintlayout.widget.ConstraintLayout>