<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue_gradient">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/m_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/cus_menu"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/m_toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextWhite16"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="@id/iv_head"
        app:layout_constraintStart_toEndOf="@id/iv_head"
        android:text="@string/default_nick_name"
        />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        style="@style/TextWhite12"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toEndOf="@id/iv_head"
        tools:text="195*****246"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingVertical="4dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/bg_10_white"
        app:layout_constraintTop_toBottomOf="@id/iv_head">

        <com.fxyandtjh.voiceaccounting.view.customer.LineItemView
            android:id="@+id/liv_security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/account_security" />

        <com.fxyandtjh.voiceaccounting.view.customer.LineItemView
            android:id="@+id/liv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:showLine="false"
            app:key="@string/personal_info" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_core"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/bg_10_white"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/container_account">

        <com.fxyandtjh.voiceaccounting.view.customer.LineItemView
            android:id="@+id/liv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/check_version" />

        <com.fxyandtjh.voiceaccounting.view.customer.LineItemView
            android:id="@+id/liv_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/clear_cache" />

        <com.fxyandtjh.voiceaccounting.view.customer.LineItemView
            android:id="@+id/liv_bug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/bug_reply" />

        <com.fxyandtjh.voiceaccounting.view.customer.LineItemView
            android:id="@+id/liv_responsibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:showLine="false"
            app:key="@string/responsibility" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        style="@style/RedText14"
        android:text="@string/logout"
        android:background="@drawable/bg_10_white"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/container_core"
        />

</androidx.constraintlayout.widget.ConstraintLayout>