<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp"
        android:background="@drawable/bg_10_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BoldText16"
            android:textAlignment="center"
            android:text="@string/confirm_delete"/>
        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/GrayText14"
            android:text="@string/delete_tips"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RedBoldText16"
            android:paddingVertical="8dp"
            android:paddingHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_delete"
            android:text="@string/confirm"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text16"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>