<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pic_select_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:background="@drawable/bg_10_white"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextPrimary14"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/camera"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray"/>
        <TextView
            android:id="@+id/tv_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/TextPrimary14"
            android:paddingVertical="10dp"
            android:text="@string/album_up"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/RedText14"
            android:paddingVertical="10dp"
            android:text="@string/cancel"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>